publish only tarballl

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,7 +31,7 @@ jobs:
         curl -sSL https://install.python-poetry.org | python3 -
         export PATH=~/.local/share/pypoetry/bin:$PATH
     - name: Build package
-      run: poetry build
+      run: poetry build --format sdist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
