--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,11 +30,8 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         export PATH=~/.local/share/pypoetry/bin:$PATH
+        pip install --upgrade --no-cache-dir --prefer-binary twine
     - name: Build package
       run: poetry build --format sdist
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: dist
+      run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*.tar.gz
